WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
261190
[IFC] TextOnlyLineBuilder has regressed "word-break: break-word" case with extremely long, unbreakable inline content
https://bugs.webkit.org/show_bug.cgi?id=261190
Summary
[IFC] TextOnlyLineBuilder has regressed "word-break: break-word" case with ex...
alan
Reported
2023-09-05 20:20:20 PDT
ssia
Attachments
[fast-cq]Patch
(19.72 KB, patch)
2023-09-05 20:28 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-09-05 20:28:16 PDT
Created
attachment 467564
[details]
[fast-cq]Patch
EWS
Comment 2
2023-09-06 06:43:44 PDT
Committed
267669@main
(81c96d61277a): <
https://commits.webkit.org/267669@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 467564
[details]
.
Radar WebKit Bug Importer
Comment 3
2023-09-06 06:44:14 PDT
<
rdar://problem/115053689
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug