[IFC] TextOnlyLineBuilder has regressed "word-break: break-word" case with extremely long, unbreakable inline content https://bugs.webkit.org/show_bug.cgi?id=261190

Reviewed by Antti Koivisto.

Let's copy what we already implemented for regular line builder where in case of breaking text at arbitrary position (word-break: break-all)
we take the overflowing width as the width of the leading text item on the subsequent line (instead of keep remeasuring it).

see PerformanceTests/Layout/simple-line-layout-word-break-long-text.html

* Source/WebCore/Sources.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/layout/formattingContexts/inline/AbstractLineBuilder.cpp: Added.
(WebCore::Layout::AbstractLineBuilder::eligibleOverflowWidthAsLeading const):
* Source/WebCore/layout/formattingContexts/inline/AbstractLineBuilder.h:
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::eligibleOverflowWidthAsLeading): Deleted.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.h:
* Source/WebCore/layout/formattingContexts/inline/LineLayoutResult.h:
* Source/WebCore/layout/formattingContexts/inline/TextOnlySimpleLineBuilder.cpp:
(WebCore::Layout::TextOnlySimpleLineBuilder::layoutInlineContent):
(WebCore::Layout::TextOnlySimpleLineBuilder::initialize):
(WebCore::Layout::TextOnlySimpleLineBuilder::placeInlineTextContent):
(WebCore::Layout::TextOnlySimpleLineBuilder::handleOverflowingTextContent):
* Source/WebCore/layout/formattingContexts/inline/TextOnlySimpleLineBuilder.h:

Canonical link: https://commits.webkit.org/267669@main